--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
 
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.1'
 
     implementation 'com.github.takusemba:spotlight:1.5.0'
